Night 3: More File Cabinet work

--- a/Tillson Galloway/Info.plist
+++ b/Tillson Galloway/Info.plist
@@ -34,6 +34,8 @@
 	<array>
 		<string>font.ttf</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
